[package]
name = "kitops"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
# gix = { version = "0.51.0", features = ["default", "blocking-network-client", "blocking-http-transport-reqwest-native-tls", "serde"] }
gix = { git = "https://github.com/Byron/gitoxide", ref = "main", features = ["default", "blocking-network-client", "blocking-http-transport-reqwest-native-tls", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tempfile = "3.3.0"
thiserror = "1.0.38"
xshell = "0.2.5"
