[package]
name = "kitops"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
gix = { git = "https://github.com/Byron/gitoxide", rev = "2b80d842", features = ["default", "blocking-network-client", "blocking-http-transport-reqwest-native-tls", "serde"] }
humantime = "2.1.0"
jwt-simple = "0.11.7"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking", "default-tls", "serde_json", "gzip", "deflate", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.17"
tempfile = "3.3.0"
thiserror = "1.0.38"
xshell = "0.2.5"
